--- a/index.html
+++ b/index.html
@@ -227,5 +227,7 @@
     </section>
   </template>
 <script src="js/main.js" type="module"></script>
+<script src="js/functions.js" type="module"></script>
+<script src="js/photos.js" type="module"></script>
 </body>
 </html>
