--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
 </head>
@@ -229,8 +229,7 @@
     </section>
   </template>
 <script src="js/main.js" type="module"></script>
+<script src="vendor/pristine/pristine-min.js" type="text/javascript"></script>
 <script src="vendor/nouislider/nouislider.js"></script>
-<script src="vendor/pristine/pristine.min.js"></script>
-<script src="js/photos.js" type="module"></script>
 </body>
 </html>
